# mfd-powermanagement

./: CCSG.md  CHANGELOG.md  CONTRIBUTING.md  DLI.md  IPMI.md  PDU.md  README.md  SYSTEM.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: main.yml  manual_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml
examples/: DLIExample.py  IpmiExample.py  PDUExample.py  ccsg_example.py  system_power_management_example.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_powermanagement/: test_ccsg.py  test_dli.py  test_ipmi.py  test_pdu.py
tests/unit/test_mfd_powermanagement/test_system/: test_freebsd.py  test_linux.py  test_windows.py
